--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,12 @@
       "src": "/static/img/logo-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "/static/img/maskable_icon.png",
+      "sizes": "196x196",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "start_url": "/",
